--- a/.github/workflows/Basic.yml
+++ b/.github/workflows/Basic.yml
@@ -32,7 +32,7 @@ jobs:
         run: cargo install cargo-sort --git https://github.com/devinr528/cargo-sort --tag v1.0.9
 
       - name: Run unit tests
-        uses: actions-rs/cargo@v2
+        uses: actions-rs/cargo@latest
         with:
           command: test
           args: --locked
@@ -40,7 +40,7 @@ jobs:
           RUST_BACKTRACE: 1
 
       - name: Compile WASM contract
-        uses: actions-rs/cargo@v2
+        uses: actions-rs/cargo@latest
         with:
           command: build
           args: --release --locked
@@ -64,19 +64,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run cargo fmt
-        uses: actions-rs/cargo@v2
+        uses: actions-rs/cargo@latest
         with:
           command: fmt
           args: --all -- --check
 
       - name: Run cargo clippy
-        uses: actions-rs/cargo@v2
+        uses: actions-rs/cargo@latest
         with:
           command: clippy
           args: -- -D warnings
 
       - name: Generate Schema
-        uses: actions-rs/cargo@v2
+        uses: actions-rs/cargo@latest
         with:
           command: schema
           args: --locked
